@@ -5,6 +5,7 @@ Patch Fixes:
 - pirate complication in Drop mission always hailed player and was not set as important
 - intel screen getMapLocation didn't actually point the player where they needed to go during the payment phase of the Luminary quest
 - deciding to keep The Luminary resulted in -100 vengeful rep with the quest giver, changed to `EXTREME` penalty (less than you think)
+- keeping the Luminary also failed to trigger any other consequences
 - two instances of receive being misspelt
 - add minor stage setting during situation when leaving via shuttle with 'guilt'
 
